Add missing BASE_EXPORT to base::kDCheckIsFatal constant.

Bug: 832380
Change-Id: I0f059b801826147a8e86a7ba141215e95f57c734
Reviewed-on: https://chromium-review.googlesource.com/1011646
Reviewed-by: David Grogan <dgrogan@chromium.org>
Reviewed-by: Alexei Svitkine <asvitkine@chromium.org>
Commit-Queue: Wez <wez@chromium.org>
Cr-Commit-Position: refs/heads/master@{#550676}
Former-commit-id: be978d748f8d136dc9ac8d73eb2bd36edfea0279